--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "html-template-tag": "^4.0.1",
+    "node-time-ago": "^1.0.0",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
