--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "axios": "^1.5.0",
+    "commander": "^11.0.0",
     "express": "^4.18.1",
     "html-template-tag": "^4.0.1",
     "node-time-ago": "^1.0.0",
@@ -9,5 +11,8 @@
   },
   "scripts": {
     "start": "nodemon app.js"
+  },
+  "bin": {
+    "my-cli": "./cli.js"
   }
 }
