--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sqlite3": "^5.1.6"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "cli": "./cli.js faq ./cli.js help"
   },
   "bin": {
     "my-cli": "./cli.js"
